Fix a race condition in KisUpdateScheduler

If spareThreadAppeared() signal comes between `m_d->processingBlocked = true`
and `m_d->processingBlocked = false` lines, then no update will be started
even when we return from the barrier lock call.

In normal case, when the barrier lock is successful, processQueues()
is called in the unlock call, but here it doesn't happen.

BUG:378158